--- a/update-oracle-linux.yaml
+++ b/update-oracle-linux.yaml
@@ -1,6 +1,6 @@
 ---
   
-- hosts: all
+- hosts: ubuntu
   vars:
     ansible_host_key_checking: false ##If you get an error about hosts not trusted
   become: true
