--- a/install-nginx-oracle.yaml
+++ b/install-nginx-oracle.yaml
@@ -1,3 +1,4 @@
+# https://virtualtech.tistory.com/554
 ---
 - hosts: oracle # hosts 파일에 등록한 호스트명
   tasks:
@@ -5,11 +6,11 @@
     yum: 
       name: nginx
       state: latest
-    become: true
-    become_method: sudo
+    #become: true
+    #become_method: sudo
   - name: start nginx
     service:
       name: nginx
       state: started
-    become: true
-    become_method: sudo
+    #become: true
+    #become_method: sudo
