--- a/uninstall-nginx-ubuntu.yaml
+++ b/uninstall-nginx-ubuntu.yaml
@@ -1,10 +1,11 @@
 # https://sujitpatel.in/article/how-to-install-nginx-using-ansible-playbook/
 ---
-- hosts: web
+- hosts: ubuntu
+  become: yes
   tasks:
     - name: stop nginx
       service:
           name: nginx
           state: stopped
     - name: uninstall nginx
-      apt: name=nginx state=absent
+      apt: name=nginx state=absent autoremove=yes
