--- a/uninstall-nginx-ubuntu.yaml
+++ b/uninstall-nginx-ubuntu.yaml
@@ -3,9 +3,9 @@
 - hosts: ubuntu
   become: yes
   tasks:
-    - name: stop nginx
-      service:
-          name: nginx
-          state: stopped
+  #  - name: stop nginx
+  #    service:
+  #        name: nginx
+  #        state: stopped
     - name: uninstall nginx
       apt: name=nginx state=absent autoremove=yes
