--- a/install-nginx.yaml
+++ b/install-nginx.yaml
@@ -14,7 +14,7 @@
         state: latest
       when:
         - ansible_os_family == "RedHat"
-        - ansible_distribution == "CentOS"
+        - ansible_distribution == "OracleLinux"
     - name: start nginx
       service:
         name: nginx
