--- a/system-updates-playbook.yaml
+++ b/system-updates-playbook.yaml
@@ -12,7 +12,7 @@
        #cache_valid_time: 3600
       when:
         - ansible_os_family == "RedHat"
-        - ansible_distribution == "CentOS"
+        - ansible_distribution == "OracleLinux"
 
     - name: Install system updates for ubuntu systems
       apt:
