--- a/run-shell-scripts.yaml
+++ b/run-shell-scripts.yaml
@@ -3,6 +3,11 @@
 - hosts: all
   become: yes
   tasks:
+    - name: "creating directory"
+      file:
+        state: directory
+        path: /tmp/ansible/test_shell
+        mode: 0750
     - name: download get_host_name.sh
       ansible.builtin.get_url:
         url: https://raw.githubusercontent.com/cutefly/ansible-semaphore/main/scripts/get_host_name.sh
