--- a/run-shell-scripts.yaml
+++ b/run-shell-scripts.yaml
@@ -15,6 +15,8 @@
         mode: '0440'
     - name: run get_host_name.sh
       shell: ". /tmp/ansible/test_shell/get_host_name.sh"
+    - name: get host name
+      shell: "echo $(hostname -f) > /tmp/ansible/test_shell/shell_file"
     - name: read file content
       command: "cat /tmp/ansible/test_shell/shell_file"
       register: out
